--- a/labongBE/src/main/resources/application.properties
+++ b/labongBE/src/main/resources/application.properties
@@ -1,1 +1,42 @@
+server.port=9999
+#server.servlet.context-path=/trip_spring
 
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+# Database Setting
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.hikari.jdbc-url=jdbc:mysql://127.0.0.1:3306/ssafyweb?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tripdb?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+#spring.datasource.hikari.username=ssafy
+#spring.datasource.hikari.password=ssafy
+
+# hikariCP Setting
+#spring.datasource.hikari.maximum-pool-size=50
+#spring.datasource.hikari.minimum-idle=50
+#spring.datasource.hikari.connection-timeout=5000
+#spring.datasource.hikari.connection-init-sql=SELECT 1
+#spring.datasource.hikari.idle-timeout=600000
+#spring.datasource.hikari.max-lifetime=1800000
+#spring.datasource.hikari.auto-commit=true
+
+# mapper Setting
+#mybatis.mapper-locations=mapper/**/*.xml
+#mybatis.type-aliases-package=com.ssafy.trip_spring.dto
+
+# file upload setting
+# path setting
+# spring.servlet.multipart.location=c:\\springboot\\upload
+#file.path=c:\\springboot\\upload
+#file.imgPath=c:\\springboot\\img
+
+# size setting
+#spring.servlet.multipart.max-file-size=25MB
+
+
+#logging setting
+#logging.level.root=info
+#logging.level.com.ssafy.trip_spring=debug 
+
+#swagger
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
