--- a/labongBE/src/main/resources/application.properties
+++ b/labongBE/src/main/resources/application.properties
@@ -30,4 +30,5 @@ jasypt.encryptor.bean=jasyptStringEncryptor
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 #file-upload
-file.path.upload-files=/Users/kimtaeseok/Pictures/
+file.path.upload-files=/Users/kimtaeseok/labong_BE/labongBE/src/main/resources/static/img/
+# ??? vue ?? src/assets/img/ ? ???? ??.
