--- a/labongBE/src/main/resources/application.properties
+++ b/labongBE/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9090
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/labong?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=ssafy
 
 #mapper location settings
 mybatis.type-aliases-package=com.comealone.jeju.domain.model
